<resources>
    <string name="app_name">Citas</string>
    <string name="label_login">Inicio de Sesión</string>
    <string name="label_email">Correo</string>
    <string name="label_password">Contraseña</string>
    <string name="btn_login">Ingresar</string>
    <string name="label_go_to_register">¿Aún no te has registrado?</string>
    <string name="label_register">Registro</string>
    <string name="label_name">Nombre completo</string>
    <string name="btn_register">Confirmar recurso</string>
    <string name="label_go_to_login">¿Ya tienes una cuenta?</string>
    <string name="please_fill_your_register_data">Por favor completa tus datos</string>
    <string name="btn_create_appointment">Reservar cita</string>
    <string name="btn_my_appointments">Mis citas</string>
    <string name="btn_log_out">Cerrar sesión</string>
    <string name="label_welcome">Bienvenido</string>
    <string name="label_create_appointment">Reservar cita</string>
    <string name="label_description">Descripción</string>
    <string name="label_specialty">Especialidad</string>
    <string name="label_type">Tipo de cita</string>
    <string name="type1">Consulta</string>
    <string name="type2">Examen</string>
    <string name="type3">Operación</string>
    <string name="btn_next">Siguiente</string>
    <string name="label_doctor">Doctor</string>
    <string name="label_scheduled_date">Fecha para la cita</string>
    <string name="btn_confirm">Confirmar</string>

    <string name="date_format">%1$d-%2$s-%3$s</string>
    <string name="item_appointment_id">Cita No: %1$d</string>
    <string name="item_appointment_date">Fecha: %1$s</string>
    <string name="item_appointment_time">Hora: %1$s</string>
    <string name="label_my_appointments">Mis citas médicas</string>
    <string name="press_back_again">Presione una vez más para salir</string>
    <string name="dialog_create_appointment_exit_title">¿Estás seguro que deseas Salir?</string>
    <string name="dialog_create_appointment_exit_message">Los datos capturados se perderán.</string>
    <string name="dialog_create_appointment_exit_positive_btn">Si, Salir</string>
    <string name="dialog_create_appointment_exit_negative_btn">Continuar registro</string>
    <string name="validate_appointment_description">La descripción es demaciado corta</string>
    <string name="label_scheduled_time">Hora de la cita</string>
    <string name="Label_confirm_appointment_data">Datos de la cita</string>
    <string name="validate_appointment_date">Es necesario seleccionar una fecha</string>
    <string name="validate_appointment_time">En necesario definir una hora  para la cita</string>
    <string name="errro_loading_specialties">Ocurrio un problema al cargar las especialidades</string>
    <string name="errro_loading_doctors">Ocurrio un problema al cargar los doctores</string>
    <string name="error_loading_hours">No se han podido mostrar las horas</string>
    <string name="label_select_doctor_and_date">Seleccione un doctor y una fecha para ver sus horas disponibles.</string>
    <string name="label_not_available_hours">No se encontraron horas disponibles para el día seleccionado.</string>
    <string name="error_login_response">Se obtuvo una respuesta inesperada del servidor</string>
    <string name="error_invalid_credentials">Las credenciales son incorrectas</string>
    <string name="error_empty_credencials">Por favor ingrese un correo y una contraseña</string>
    <string name="welcome_name">Bienvenido %1$s</string>
    <string name="item_appointment_created_at">Esta cita se registro el día %1$s, con la siguiente descripción:</string>
</resources>
