<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".MenuActivity">

    <TextView
        android:paddingTop="12dp"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="60dp"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/label_welcome"/>


    <Button
        android:id="@+id/btnCreateAppointment"
        style="@style/MenuButton"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/ic_add_list"
        android:text="@string/btn_create_appointment" />

    <Button
        android:id="@+id/btnMyAppointments"
        style="@style/MenuButton"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/ic_calendar"
        android:text="@string/btn_my_appointments" />

    <Button
        android:id="@+id/btnLogout"
        style="@style/MenuButton"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/ic_power_off"
        android:text="@string/btn_log_out" />

</LinearLayout>
